build: 利用docker-compose + viper实现多环境

--- a/deployments/Dockerfile
+++ b/deployments/Dockerfile
@@ -5,7 +5,7 @@ ENV GOPROXY https://goproxy.cn
 
 WORKDIR /opt/server
 
-COPY go.mod go.mod
+COPY go.mod .
 COPY go.sum go.sum
 RUN go mod download
 
@@ -14,14 +14,10 @@ COPY . .
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -a -installsuffix cgo -o server ./cmd/server/main.go
 
 FROM alpine:latest
-RUN apk --no-cache add tzdata  && \
-    ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && \
-    echo "Asia/Shanghai" > /etc/timezone
-
 WORKDIR  /
 COPY --from=builder /opt/server/server .
-COPY --from=builder /opt/server/configs ./configs
 
-ENV ServerMode=":8889" ConsulAddr=":9110"
+# ENV SERVER_MODE="dev" 
+# ENV CONSUL_ADDR="192.168.0.223:8500"
 
 ENTRYPOINT ["/server"]
