--- a/deployments/dev.docker-compose.yml
+++ b/deployments/dev.docker-compose.yml
@@ -5,4 +5,4 @@ services:
     # 错误信息" server  | ERROR 2022/09/23 08:33:13 get remote config: Get "http://\"192.168.0.223:8500\"/v1/kv/%!p(MISSING)rod%!"(MISSING): dial tcp: lookup "192.168.0.223:8500": no such host
     environment:
       - SERVER_MODE=dev
-      - CONSUL_ADDR=192.168.0.223:8500
+      - CONSUL_ADDR=$DEV_CONSUL_ADDR
